--- a/myst.yml
+++ b/myst.yml
@@ -6,28 +6,30 @@ project:
   keywords: [options pricing, Lévy models, NIG process, inverse transform, quantitative finance, R programming]
   authors:
     - name: Joseph Loss
+      corresponding: true
       email: connect@josephjloss.com
       url: https://josephjloss.com
       github: chicago-joe
+      linkedin: https://linkedin.com/in/josephjl
     - name: Yuchen Duan
     - name: Daniel Liberman
-  github: https://github.com/chicago-joe/Option-Pricing-via-Levy-Models
+  github: https://github.com/chicago-joe/Option-Pricing-via-Levy-Models/
   exports:
     - format: pdf
       template: lapreprint-typst
+      title: Options Pricing Research
       output: exports/option-pricing-research.pdf
   toc:
     - title: Home
       file: index.md
-    - title: Academic Paper
+    - title: Academic Paper - Feng et al.
       file: academic-paper.md
     - title: R/Finance Presentation
       file: presentation-slides.md
 
 site:
   template: book-theme
-  title: "Options Pricing in Lévy Models"
-  logo: assets/logo.png
+  title: "Joseph Loss - Options Pricing Research"
   nav:
     - title: My Website
       url: https://josephjloss.com
@@ -38,12 +40,16 @@ site:
   actions:
     - title: View on GitHub
       url: https://github.com/chicago-joe/Option-Pricing-via-Levy-Models
-    - title: Download Research Proposal
-      url: documentation/Project Research Proposal.pdf
   options:
-    style: ./_static/custom.css
+    style: ./custom.css
+    show_source: false
+    hide_outline: false
+    hide_search: false
+    numbered_headers: false
+    folders: false
   parts:
     footer: |
       © 2025 Joseph Loss, Yuchen Duan, Daniel Liberman. All rights reserved.
       Research conducted at Illinois Institute of Technology.
-      [View Source Code](https://github.com/chicago-joe/Option-Pricing-via-Levy-Models)
+      [Connect with me on LinkedIn](https://linkedin.com/in/josephjl) |
+      [View on GitHub](https://github.com/chicago-joe)
